tests/snapshots/snapshot_fixtures__fixtures__atomic_explicit_orderings.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/atomic_explicit_orderings.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[28] = "%d %d %d %d %d %d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, ".atomictmp", align 4
    %3 = alloca s32i, "relaxed_load", align 4
    %4 = alloca s32i, "atomic-temp", align 4
    %5 = alloca s32i, ".atomictmp", align 4
    %6 = alloca s32i, "acquire_load", align 4
    %7 = alloca s32i, "atomic-temp", align 4
    %8 = alloca s32i, ".atomictmp", align 4
    %9 = alloca s32i, "consume_load", align 4
    %10 = alloca s32i, "atomic-temp", align 4
    %11 = alloca s32i, "old_add", align 4
    %12 = alloca s32i, ".atomictmp", align 4
    %13 = alloca s32i, "atomic-temp", align 4
    %14 = alloca s32i, "old_or", align 4
    %15 = alloca s32i, ".atomictmp", align 4
    %16 = alloca s32i, "atomic-temp", align 4
    %17 = alloca s32i, "old_xchg", align 4
    %18 = alloca s32i, ".atomictmp", align 4
    %19 = alloca s32i, "atomic-temp", align 4
    %20 = alloca s32i, "expected", align 4
    %21 = alloca s32i, "ok", align 4
    %22 = alloca s32i, ".atomictmp", align 4
    %23 = alloca bool, "cmpxchg.bool", align 1
    %24 = const 0 : s32i
    store %24, %0
    %25 = const 0 : s32i
    store %25, %1, align 4
    %26 = const 10 : s32i
    store %26, %2, align 4
    %27 = load %2 : s32i, align 4
    store %27, %1, align 4
    %28 = load %1 : s32i, align 4
    store %28, %4, align 4
    %29 = load %4 : s32i, align 4
    store %29, %3, align 4
    %30 = const 20 : s32i
    store %30, %5, align 4
    %31 = load %5 : s32i, align 4
    store %31, %1, align 4
    %32 = load %1 : s32i, align 4
    store %32, %7, align 4
    %33 = load %7 : s32i, align 4
    store %33, %6, align 4
    %34 = const 30 : s32i
    store %34, %8, align 4
    %35 = load %8 : s32i, align 4
    store %35, %1, align 4
    %36 = load %1 : s32i, align 4
    store %36, %10, align 4
    %37 = load %10 : s32i, align 4
    store %37, %9, align 4
    %38 = const 2 : s32i
    store %38, %12, align 4
    %39 = load %12 : s32i, align 4
    <unmodeled: cir.atomic.fetch>
    store %40, %13, align 4
    %41 = load %13 : s32i, align 4
    store %41, %11, align 4
    %42 = const 1 : s32i
    store %42, %15, align 4
    %43 = load %15 : s32i, align 4
    <unmodeled: cir.atomic.fetch>
    store %44, %16, align 4
    %45 = load %16 : s32i, align 4
    store %45, %14, align 4
    %46 = const 5 : s32i
    store %46, %18, align 4
    %47 = load %18 : s32i, align 4
    <unmodeled: cir.atomic.xchg>
    store %48, %19, align 4
    %49 = load %19 : s32i, align 4
    store %49, %17, align 4
    %50 = const 5 : s32i
    store %50, %20, align 4
    %51 = const 8 : s32i
    store %51, %22, align 4
    %52 = load %20 : s32i, align 4
    %53 = load %22 : s32i, align 4
    <unmodeled: cir.atomic.cmpxchg>
    %55 = not %54#1 : bool
    if %55 {
        store %54#0, %20, align 4
        yield
    }
    store %54#1, %23, align 1
    %56 = load %23 : bool, align 1
    %57 = cast(bool_to_int) %56 : s32i
    store %57, %21, align 4
    <unmodeled: cir.atomic.fence>
    <unmodeled: cir.atomic.fence>
    %58 = get_global @printf : ((s8i*, ...) -> s32i)*
    %59 = get_global @.str : s8i[28]*
    %60 = cast(array_to_ptrdecay) %59 : s8i*
    %61 = load %3 : s32i, align 4
    %62 = load %6 : s32i, align 4
    %63 = load %9 : s32i, align 4
    %64 = load %11 : s32i, align 4
    %65 = load %14 : s32i, align 4
    %66 = load %17 : s32i, align 4
    %67 = load %21 : s32i, align 4
    %68 = load %20 : s32i, align 4
    %69 = load %1 : s32i, align 4
    %70 = call @printf(%60, %61, %62, %63, %64, %65, %66, %67, %68, %69) : s32i [all]
    %71 = const 0 : s32i
    store %71, %0
    %72 = load %0 : s32i
    return %72
}
