tests/snapshots/snapshot_fixtures__fixtures__atomic_flag_ops.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/atomic_flag_ops.c" (c, x86_64-unknown-linux-gnu)
global __const.main.flag : rec_atomic_flag = zero [cir_private, default, dso_local, constant]
global .str : s8i[13] = "%d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_atomic_flag, "flag", align 1
    %2 = alloca s32i, "first", align 4
    %3 = alloca bool, ".atomictmp", align 1
    %4 = alloca bool, "atomic-temp", align 1
    %5 = alloca bool, ".atomictmp", align 1
    %6 = alloca s32i, "second", align 4
    %7 = alloca bool, ".atomictmp", align 1
    %8 = alloca bool, "atomic-temp", align 1
    %9 = alloca s32i, "third", align 4
    %10 = alloca bool, ".atomictmp", align 1
    %11 = alloca bool, "atomic-temp", align 1
    %12 = alloca bool, ".atomictmp", align 1
    %13 = alloca s32i, "fourth", align 4
    %14 = alloca bool, ".atomictmp", align 1
    %15 = alloca bool, "atomic-temp", align 1
    %16 = const 0 : s32i
    store %16, %0
    %17 = get_global @__const.main.flag : rec_atomic_flag*
    copy %1, %17
    %18 = get_member %1[0] "_Value" : bool*
    %19 = const 1 : s32i
    %20 = cast(int_to_bool) %19 : bool
    store %20, %3, align 1
    %21 = cast(bitcast) %18 : u8i*
    %22 = cast(bitcast) %3 : u8i*
    %23 = cast(bitcast) %4 : u8i*
    %24 = load %22 : u8i, align 1
    <unmodeled: cir.atomic.xchg>
    store %25, %23, align 1
    %26 = cast(bitcast) %23 : bool*
    %27 = load %26 : bool, align 1
    %28 = cast(bool_to_int) %27 : s32i
    store %28, %2, align 4
    %29 = get_member %1[0] "_Value" : bool*
    %30 = const 0 : s32i
    %31 = cast(int_to_bool) %30 : bool
    store %31, %5, align 1
    %32 = cast(bitcast) %29 : u8i*
    %33 = cast(bitcast) %5 : u8i*
    %34 = load %33 : u8i, align 1
    store %34, %32, align 1
    %35 = get_member %1[0] "_Value" : bool*
    %36 = const 1 : s32i
    %37 = cast(int_to_bool) %36 : bool
    store %37, %7, align 1
    %38 = cast(bitcast) %35 : u8i*
    %39 = cast(bitcast) %7 : u8i*
    %40 = cast(bitcast) %8 : u8i*
    %41 = load %39 : u8i, align 1
    <unmodeled: cir.atomic.xchg>
    store %42, %40, align 1
    %43 = cast(bitcast) %40 : bool*
    %44 = load %43 : bool, align 1
    %45 = cast(bool_to_int) %44 : s32i
    store %45, %6, align 4
    %46 = get_member %1[0] "_Value" : bool*
    %47 = const 1 : s32i
    %48 = cast(int_to_bool) %47 : bool
    store %48, %10, align 1
    %49 = cast(bitcast) %46 : u8i*
    %50 = cast(bitcast) %10 : u8i*
    %51 = cast(bitcast) %11 : u8i*
    %52 = load %50 : u8i, align 1
    <unmodeled: cir.atomic.xchg>
    store %53, %51, align 1
    %54 = cast(bitcast) %51 : bool*
    %55 = load %54 : bool, align 1
    %56 = cast(bool_to_int) %55 : s32i
    store %56, %9, align 4
    %57 = get_member %1[0] "_Value" : bool*
    %58 = const 0 : s32i
    %59 = cast(int_to_bool) %58 : bool
    store %59, %12, align 1
    %60 = cast(bitcast) %57 : u8i*
    %61 = cast(bitcast) %12 : u8i*
    %62 = load %61 : u8i, align 1
    store %62, %60, align 1
    %63 = get_member %1[0] "_Value" : bool*
    %64 = const 1 : s32i
    %65 = cast(int_to_bool) %64 : bool
    store %65, %14, align 1
    %66 = cast(bitcast) %63 : u8i*
    %67 = cast(bitcast) %14 : u8i*
    %68 = cast(bitcast) %15 : u8i*
    %69 = load %67 : u8i, align 1
    <unmodeled: cir.atomic.xchg>
    store %70, %68, align 1
    %71 = cast(bitcast) %68 : bool*
    %72 = load %71 : bool, align 1
    %73 = cast(bool_to_int) %72 : s32i
    store %73, %13, align 4
    %74 = get_global @printf : ((s8i*, ...) -> s32i)*
    %75 = get_global @.str : s8i[13]*
    %76 = cast(array_to_ptrdecay) %75 : s8i*
    %77 = load %2 : s32i, align 4
    %78 = load %6 : s32i, align 4
    %79 = load %9 : s32i, align 4
    %80 = load %13 : s32i, align 4
    %81 = call @printf(%76, %77, %78, %79, %80) : s32i [all]
    %82 = const 0 : s32i
    store %82, %0
    %83 = load %0 : s32i
    return %83
}
