tests/snapshots/snapshot_fixtures__fixtures__atomic_widths.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/atomic_widths.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[29] = "%u %d %u %lld %u %d %u %lld\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i, "u8", align 1
    %2 = alloca s8i, "i8", align 1
    %3 = alloca u32i, "u32", align 4
    %4 = alloca s64i, "i64", align 8
    %5 = alloca u8i, "old_u8", align 1
    %6 = alloca u8i, ".atomictmp", align 1
    %7 = alloca u8i, "atomic-temp", align 1
    %8 = alloca s8i, "old_i8", align 1
    %9 = alloca s8i, ".atomictmp", align 1
    %10 = alloca s8i, "atomic-temp", align 1
    %11 = alloca u32i, "old_u32", align 4
    %12 = alloca u32i, ".atomictmp", align 4
    %13 = alloca u32i, "atomic-temp", align 4
    %14 = alloca s64i, "old_i64", align 8
    %15 = alloca s64i, ".atomictmp", align 8
    %16 = alloca s64i, "atomic-temp", align 8
    %17 = const 0 : s32i
    store %17, %0
    %18 = const 250 : u8i
    store %18, %1, align 1
    %19 = const -5 : s8i
    store %19, %2, align 1
    %20 = const 1000 : u32i
    store %20, %3, align 4
    %21 = const -10000000000 : s64i
    store %21, %4, align 8
    %22 = const 3 : u8i
    store %22, %6, align 1
    %23 = load %6 : u8i, align 1
    <unmodeled: cir.atomic.fetch>
    store %24, %7, align 1
    %25 = load %7 : u8i, align 1
    store %25, %5, align 1
    %26 = const 7 : s8i
    store %26, %9, align 1
    %27 = load %9 : s8i, align 1
    <unmodeled: cir.atomic.fetch>
    store %28, %10, align 1
    %29 = load %10 : s8i, align 1
    store %29, %8, align 1
    %30 = const 255 : u32i
    store %30, %12, align 4
    %31 = load %12 : u32i, align 4
    <unmodeled: cir.atomic.fetch>
    store %32, %13, align 4
    %33 = load %13 : u32i, align 4
    store %33, %11, align 4
    %34 = const 1234567890123 : s64i
    store %34, %15, align 8
    %35 = load %15 : s64i, align 8
    <unmodeled: cir.atomic.xchg>
    store %36, %16, align 8
    %37 = load %16 : s64i, align 8
    store %37, %14, align 8
    %38 = get_global @printf : ((s8i*, ...) -> s32i)*
    %39 = get_global @.str : s8i[29]*
    %40 = cast(array_to_ptrdecay) %39 : s8i*
    %41 = load %5 : u8i, align 1
    %42 = cast(integral) %41 : s32i
    %43 = load %8 : s8i, align 1
    %44 = cast(integral) %43 : s32i
    %45 = load %11 : u32i, align 4
    %46 = load %14 : s64i, align 8
    %47 = load %1 : u8i, align 1
    %48 = cast(integral) %47 : s32i
    %49 = load %2 : s8i, align 1
    %50 = cast(integral) %49 : s32i
    %51 = load %3 : u32i, align 4
    %52 = load %4 : s64i, align 8
    %53 = call @printf(%40, %42, %44, %45, %46, %48, %50, %51, %52) : s32i [all]
    %54 = const 0 : s32i
    store %54, %0
    %55 = load %0 : s32i
    return %55
}
