tests/snapshots/snapshot_fixtures__fixtures__bitfield_init_increment.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/bitfield_init_increment.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : rec_Bits = {3147777} [cir_private, default, dso_local, constant]
global .str : s8i[13] = "%d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_Bits, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.x : rec_Bits*
    copy %1, %3
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[13]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = get_member %1[0] "a" : u32i*
    %8 = get_bitfield %7, "a": 10 bits @0 in signed u32i : s32i, align 4
    %9 = inc %8 : s32i [nsw]
    %10 = set_bitfield %7, %9, "a": 10 bits @0 in signed u32i : s32i, align 4
    %11 = get_member %1[0] "b" : u32i*
    %12 = get_bitfield %11, "b": 10 bits @10 in signed u32i : s32i, align 4
    %13 = inc %12 : s32i [nsw]
    %14 = set_bitfield %11, %13, "b": 10 bits @10 in signed u32i : s32i, align 4
    %15 = get_member %1[0] "c" : u32i*
    %16 = get_bitfield %15, "c": 10 bits @20 in signed u32i : s32i, align 4
    %17 = inc %16 : s32i [nsw]
    %18 = set_bitfield %15, %17, "c": 10 bits @20 in signed u32i : s32i, align 4
    %19 = const 4 : u64i
    %20 = call @printf(%6, %8, %12, %16, %19) : s32i [all]
    %21 = get_global @printf : ((s8i*, ...) -> s32i)*
    %22 = get_global @.str.1 : s8i[10]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = get_member %1[0] "a" : u32i*
    %25 = get_bitfield %24, "a": 10 bits @0 in signed u32i : s32i, align 4
    %26 = inc %25 : s32i [nsw]
    %27 = set_bitfield %24, %26, "a": 10 bits @0 in signed u32i : s32i, align 4
    %28 = get_member %1[0] "b" : u32i*
    %29 = get_bitfield %28, "b": 10 bits @10 in signed u32i : s32i, align 4
    %30 = inc %29 : s32i [nsw]
    %31 = set_bitfield %28, %30, "b": 10 bits @10 in signed u32i : s32i, align 4
    %32 = get_member %1[0] "c" : u32i*
    %33 = get_bitfield %32, "c": 10 bits @20 in signed u32i : s32i, align 4
    %34 = inc %33 : s32i [nsw]
    %35 = set_bitfield %32, %34, "c": 10 bits @20 in signed u32i : s32i, align 4
    %36 = call @printf(%23, %27, %31, %35) : s32i [all]
    %37 = const 0 : s32i
    store %37, %0
    %38 = load %0 : s32i
    return %38
}
