tests/snapshots/snapshot_fixtures__fixtures__bitfield_ops.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/bitfield_ops.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "%u %d %u %u\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "%u %d %u\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[7] = "%u %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[11] = "%llu %lld\n" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[6] = "%llu\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_Bits, "s", align 4
    %2 = alloca rec_Wide, "w", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 5 : u32i
    %5 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.set_bitfield>
    %7 = const -3 : s32i
    %8 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.set_bitfield>
    %10 = const 1 : u32i
    %11 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.set_bitfield>
    %13 = const 4000 : u32i
    %14 = get_member %1[0] "d" : u32i*
    <unmodeled: cir.set_bitfield>
    %16 = get_global @printf : ((s8i*, ...) -> s32i)*
    %17 = get_global @.str : s8i[13]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.get_bitfield>
    %21 = cast(integral) %20 : s32i
    %22 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.get_bitfield>
    %24 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.get_bitfield>
    %26 = cast(integral) %25 : s32i
    %27 = get_member %1[0] "d" : u32i*
    <unmodeled: cir.get_bitfield>
    %29 = cast(integral) %28 : s32i
    %30 = call @printf(%18, %21, %23, %26, %29) : s32i [all]
    %31 = const 13 : u32i
    %32 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.set_bitfield>
    %34 = const 20 : s32i
    %35 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.set_bitfield>
    %37 = const 3 : u32i
    %38 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.set_bitfield>
    %40 = get_global @printf : ((s8i*, ...) -> s32i)*
    %41 = get_global @.str.1 : s8i[10]*
    %42 = cast(array_to_ptrdecay) %41 : s8i*
    %43 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.get_bitfield>
    %45 = cast(integral) %44 : s32i
    %46 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.get_bitfield>
    %48 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.get_bitfield>
    %50 = cast(integral) %49 : s32i
    %51 = call @printf(%42, %45, %47, %50) : s32i [all]
    %52 = const 4 : s32i
    %53 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.get_bitfield>
    %55 = cast(integral) %54 : s32i
    %56 = add %55, %52 : s32i [nsw]
    %57 = cast(integral) %56 : u32i
    <unmodeled: cir.set_bitfield>
    %59 = const 1 : s32i
    %60 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.get_bitfield>
    %62 = sub %61, %59 : s32i [nsw]
    <unmodeled: cir.set_bitfield>
    %64 = get_global @printf : ((s8i*, ...) -> s32i)*
    %65 = get_global @.str.2 : s8i[7]*
    %66 = cast(array_to_ptrdecay) %65 : s8i*
    %67 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.get_bitfield>
    %69 = cast(integral) %68 : s32i
    %70 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.get_bitfield>
    %72 = call @printf(%66, %69, %71) : s32i [all]
    %73 = const 7 : u32i
    %74 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.set_bitfield>
    %76 = const 15 : s32i
    %77 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.set_bitfield>
    %79 = const 0 : u32i
    %80 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.set_bitfield>
    %82 = const 4095 : u32i
    %83 = get_member %1[0] "d" : u32i*
    <unmodeled: cir.set_bitfield>
    %85 = get_global @printf : ((s8i*, ...) -> s32i)*
    %86 = get_global @.str : s8i[13]*
    %87 = cast(array_to_ptrdecay) %86 : s8i*
    %88 = get_member %1[0] "a" : u32i*
    <unmodeled: cir.get_bitfield>
    %90 = cast(integral) %89 : s32i
    %91 = get_member %1[0] "b" : u32i*
    <unmodeled: cir.get_bitfield>
    %93 = get_member %1[0] "c" : u32i*
    <unmodeled: cir.get_bitfield>
    %95 = cast(integral) %94 : s32i
    %96 = get_member %1[0] "d" : u32i*
    <unmodeled: cir.get_bitfield>
    %98 = cast(integral) %97 : s32i
    %99 = call @printf(%87, %90, %92, %95, %98) : s32i [all]
    %100 = const 1099511627775 : u64i
    %101 = get_member %2[0] "x" : u64i*
    <unmodeled: cir.set_bitfield>
    %103 = const -500000 : s64i
    %104 = get_member %2[1] "y" : u64i*
    <unmodeled: cir.set_bitfield>
    %106 = get_global @printf : ((s8i*, ...) -> s32i)*
    %107 = get_global @.str.3 : s8i[11]*
    %108 = cast(array_to_ptrdecay) %107 : s8i*
    %109 = get_member %2[0] "x" : u64i*
    <unmodeled: cir.get_bitfield>
    %111 = get_member %2[1] "y" : u64i*
    <unmodeled: cir.get_bitfield>
    %113 = call @printf(%108, %110, %112) : s32i [all]
    %114 = const 1 : u64i
    %115 = get_member %2[0] "x" : u64i*
    <unmodeled: cir.get_bitfield>
    %117 = add %116, %114 : u64i
    <unmodeled: cir.set_bitfield>
    %119 = get_global @printf : ((s8i*, ...) -> s32i)*
    %120 = get_global @.str.4 : s8i[6]*
    %121 = cast(array_to_ptrdecay) %120 : s8i*
    %122 = get_member %2[0] "x" : u64i*
    <unmodeled: cir.get_bitfield>
    %124 = call @printf(%121, %123) : s32i [all]
    %125 = const 0 : s32i
    store %125, %0
    %126 = load %0 : s32i
    return %126
}
