tests/snapshots/snapshot_fixtures__fixtures__bitfield_storage.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/bitfield_storage.c" (c, x86_64-unknown-linux-gnu)
global __const.main.value : rec_U = {zero} [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_U, "value", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.value : rec_U*
    copy %1, %3
    %4 = const 1 : u32i
    %5 = get_member %1[0] "bits" : rec_anon2E0*
    %6 = get_member %5[0] "second" : u8i*
    <unmodeled: cir.set_bitfield>
    %8 = get_member %1[0] "bits" : rec_anon2E0*
    %9 = get_member %8[0] "second" : u8i*
    <unmodeled: cir.get_bitfield>
    %11 = cast(integral) %10 : s32i
    %12 = const 1 : s32i
    %13 = cmp ne %11, %12 : bool
    %14 = cast(bool_to_int) %13 : s32i
    store %14, %0
    %15 = load %0 : s32i
    return %15
}
