tests/snapshots/snapshot_fixtures__fixtures__bitnot.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/bitnot.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "%u\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn inot(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %30 = alloca s32i, "a", align 4
        %31 = alloca s32i, "__retval", align 4
        store %arg0, %30
        %32 = load %30 : s32i, align 4
        %33 = not %32 : s32i
        store %33, %31
        %34 = load %31 : s32i
        return %34
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u32i, "u", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @printf : ((s8i*, ...) -> s32i)*
    %4 = get_global @.str : s8i[4]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = const 0 : s32i
    %7 = call @inot(%6) : s32i [all]
    %8 = call @printf(%5, %7) : s32i [all]
    %9 = get_global @printf : ((s8i*, ...) -> s32i)*
    %10 = get_global @.str : s8i[4]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = const 12 : s32i
    %13 = call @inot(%12) : s32i [all]
    %14 = call @printf(%11, %13) : s32i [all]
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str : s8i[4]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = const -1 : s32i
    %19 = call @inot(%18) : s32i [all]
    %20 = call @printf(%17, %19) : s32i [all]
    %21 = const 240 : u32i
    store %21, %1, align 4
    %22 = get_global @printf : ((s8i*, ...) -> s32i)*
    %23 = get_global @.str.1 : s8i[4]*
    %24 = cast(array_to_ptrdecay) %23 : s8i*
    %25 = load %1 : u32i, align 4
    %26 = not %25 : u32i
    %27 = call @printf(%24, %26) : s32i [all]
    %28 = const 0 : s32i
    store %28, %0
    %29 = load %0 : s32i
    return %29
}
